  the node. This was a usability problem since pressing LEFT or RIGHT
  should not deselect anything.

- The labels of -toggle and -float actions for dockables were not being
  set correctly.

- Triple clicking to select a line did not place the line in the %
  register.

- Various combinations of insertions and removes could mess up floating
  positions.

}}}
{{{ API Additions

- Icon theme support. Pass a URL to GUIUtilities.setIconPath() and all
  icons will be loaded from that URL prepended to the icon name.

}}}

}}}

{{{ Version 4.2pre4

Thanks to Chris Morris, Marcelo Vanzin, Ryan Fowler and Ryan Grove for
contributing to this release.

{{{ Syntax Highlighting

- Updated NSIS2 syntax highlighting (Ryan Grove).

- Modes from the user catalog file are checked first for a matching
  first line or file name glob (Ryan Fowler).

- Updated Ruby syntax highlighting (Chris Morris).

- Updated Pike syntax highlighting (Peter Lundqvist).

}}}
{{{ Scripting

- BeanShell 1.3b2 is now included. Improvements since 1.3a1 (which was
  included with jEdit 4.2pre3) include:

  - Properties style auto-allocation of variables.

    // foo is initially undefined
    foo.bar.gee = 42; 
    print( foo.bar.gee ); // 42

  - Scripted class support (with class keyword). Limitations:

    - Scripted classes may only extend other scripted classes
    - implement clauses are currently ignored
    - All Scripted classes appear as type bsh.This - they are
      effectively the same type of object.

  - The bsh.system object which is shared across Interpreter instances
    has been renamed "bsh.shared".  For backwards compatability it is
    still referenced as bsh.system as well.

  - All scripted objects now implement the standard object protocol of
    toString(), hashcode() and equals().

  - Various bug fixes and optimizations.

- Actions and dockables are now invoked in their own temporary
  namespace. This prevents memory leaks in code like this:
